2008-03-24  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-2.0/: add GDK_SELECTION_* bindings
	* vapi/packages/gtk+-2.0/: fix gtk_text_buffer_paste_clipboard
	  binding

	* vapi/gdk-2.0.vapi, vapi/gtk+-2.0.vapi: regenerated

	Fixes bug 524176

2008-03-24  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix crash on invalid collection
	  expressions in foreach statements, fixes bug 524033

2008-03-24  Jürg Billeter  <j@bitron.ch>

	* vapi/sdl.vapi: add missing public modifier,
	  patch by Levi Bard, fixes bug 524192

2008-03-24  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratormethod.vala: fix generated code for
	  methods returning structs

2008-03-23  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala: inherit default value from base type

2008-03-23  Jürg Billeter  <j@bitron.ch>

	* vala/valareport.vala, vala/valasourcefile.vala,
	  compiler/valacompiler.vala: add -v commandline option to improve
	  error reporting, patch by Daniel Silverstone, fixes bug 522511

2008-03-23  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/json-glib-1.0/: add metadata to fix some memory
	  leaks and out parameters, fixes bug 523889

	* vapi/json-glib-1.0.vapi: regenerated

2008-03-23  Jürg Billeter  <j@bitron.ch>

	* vala/valanamespace.vala: fix vapigen crash

2008-03-23  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: enhance GIOChannel binding,
	  based on patch by Nicolas Joseph, fixes bug 523876

2008-03-22  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix C declaration for delegates,
	  fixes bug 523734

2008-03-22  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valanamespace.vala: support nested namespaces,
	  fixes bug 516584

2008-03-22  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodedeclaration.vala, gobject/valaccodegenerator.vala:
	  use extern appropriately for static fields,
	  based on patch by Daniel Silverstone, fixes bug 523768
