@@ -1,3 +1,9 @@
+2008-03-29  Jürg Billeter  <j@bitron.ch>
+
+	* vala/parser.y, vala/valaclass.vala, vala/valaconstructor.vala,
+	  gobject/valaccodegenerator.vala: add support for static
+	  constructors, fixes bug 506985
+
 2008-03-24  Jürg Billeter  <j@bitron.ch>
 
 	* vapi/packages/gdk-2.0/: add GDK_SELECTION_* bindings
